# noso_Company_Website

./: README.md  caddy.conf  deploy.sh
backend/: app.py  config.py  pyproject.toml  requirements.txt  test_login.py
backend/database/: create_demo_records.py  mongodb.py
backend/routers/: admin.py  auth.py  bookings.py  cart.py  categories.py  contact.py  customers.py  notifications.py  partners.py  payments.py  professionals.py  services.py
backend/services/: booking_service.py  payment_service.py
backend/utils/: dependencies.py  notifications.py  schemas.py  security.py  serializers.py
docs/: CUSTOMER_DATA_STORAGE_GUIDE.md  OTP_VERIFICATION_EXPLAINED.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  cart.ts  categories.ts  client.ts  services.ts
frontend/src/components/: Logo.tsx  NZAddressAutocomplete.tsx  NotificationPanel.tsx  PhoneInput.tsx  ProfessionalRegistrationModal.tsx  ScrollToTopButton.tsx  ThemeToggle.tsx  Tooltip.tsx
frontend/src/config/: index.ts
frontend/src/layout/: MainLayout.tsx
frontend/src/pages/Admin/: AdminDashboard.tsx
frontend/src/pages/Cart/: CartPage.tsx
frontend/src/pages/Checkout/: CheckoutPage.tsx
frontend/src/pages/Contact/: ContactPage.tsx
frontend/src/pages/Landing/: LandingPage.tsx
frontend/src/pages/Login/: LoginPage.tsx
frontend/src/pages/Partner/: PartnerDashboard.tsx
frontend/src/store/: useAuthStore.ts  useCartStore.ts  useLocationStore.ts
frontend/src/types/: index.ts
(+5 files in other folders)
