[project]
name = "nosocompany-backend"
version = "0.1.0"
description = "NoSo Company Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pymongo>=4.6.1",
    "python-dotenv>=1.0.0",
    "stripe>=11.1.1",
    "httpx>=0.27.0",
    "werkzeug>=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
